--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -1,7 +1,7 @@
-.footer-message {
+.footer-message a {
     font-style: italic;
     font-size: 10px;
-    color: white;
+    color: #9a9393 !important;
     position: absolute;
     bottom: 10px;
     right: 10px;
