--- a/frontend/src/styles/start.css
+++ b/frontend/src/styles/start.css
@@ -1,12 +1,12 @@
 .start-title {
     font-size: 50px;
-    color: white;
+    color: #16f82d;
     text-align: center;
     padding-bottom: 100px;
 }
 
 .start-button-text {
     font-size: 25px;
-    color: white;
+    color: #16f82d;
     text-align: center;
 }
