--- a/frontend/src/styles/start.css
+++ b/frontend/src/styles/start.css
@@ -7,6 +7,16 @@
 
 .start-button-text {
     font-size: 25px;
-    color: #16f82d;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    width: inherit;
+}
+
+.start-button-container {
+    color: #F0EAD6;
+    width: 15%;
+    background-color: #F0EAD6;
+    border-radius: 25px;
     text-align: center;
 }
