--- a/frontend/src/styles/custom-alert.css
+++ b/frontend/src/styles/custom-alert.css
@@ -43,6 +43,29 @@
     width: 100px;
 }
 
+.view {
+    background-color: #fff;
+    border: 1px solid #d5d9d9;
+    border-radius: 8px;
+    box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+    box-sizing: border-box;
+    color: #0f1111;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Amazon Ember",sans-serif;
+    font-size: 13px;
+    line-height: 29px;
+    padding: 0 10px 0 11px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    width: 100px;
+}
+
 .close:hover,
 .close:focus {
   color: black;
@@ -52,6 +75,10 @@
 
 .green-text {
     color: green;
+}
+
+.yellow-text {
+    color: rgb(158, 158, 11);
 }
   
 .red-text {
