--- a/frontend/src/styles/game.css
+++ b/frontend/src/styles/game.css
@@ -1,8 +1,9 @@
 .get-word-button {
     text-align: center;
+    position: absolute;
+    bottom: 40%;
     cursor: pointer;
     width: 10%;
-    height: 20px;
     border: 1px gray;
     color: #F0EAD6;
     background-color: #F0EAD6;
@@ -17,18 +18,21 @@
 }
 
 .game-description-box {
-    width: 35%;
-    position: absolute;
-    top: 70px;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
     background-color: #F0EAD6;
     border-radius: 25px;
+    width: 30%;
 }
 
 .game-description-text {
     color: black;
     text-align: center;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .word-display {
@@ -58,6 +62,101 @@
     border: 1px gray;
 }
 
+.input-bar[disabled] {
+    cursor: not-allowed;
+}
+
 input, select, textarea {
     color: #F0EAD6;
+}
+
+.page-header {
+    position: fixed;
+    top: 70px;
+    left: 0;
+    right: 0;
+    height: 100px; /* Adjust the height to your desired value */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.round-slider-container {
+    flex: 1;
+    margin-right: 90px;
+    margin-left: 90px;
+    text-align: center;
+    background-color: #F0EAD6;
+    border-radius: 25px;
+    height: 55px;
+    padding-top: 10px;
+}
+
+.round-slider {
+    border-radius: 25px;
+}
+
+.round-tooltip {
+    position: absolute;
+    display: none;
+    background-color: #333;
+    color: #fff;
+    padding: 5px;
+    border-radius: 4px;
+    font-size: 12px;
+    transition: opacity 0.3s;
+}
+
+.round-slider-container:hover .round-tooltip {
+    display: inline-block;
+    opacity: 1;
+    position: absolute;
+    bottom: 90%;
+    left: 19%;
+    transform: translateX(-50%);
+}
+
+.length-slider-container {
+    flex: 1;
+    text-align: center;
+    margin-right: 90px;
+    margin-left: 90px;
+    background-color: #F0EAD6;
+    padding-top: 10px;
+    border-radius: 25px;
+    height: 55px;
+    
+}
+
+.length-slider {
+    border-radius: 25px;
+}
+
+.length-tooltip {
+    position: absolute;
+    display: none;
+    background-color: #333;
+    color: #fff;
+    padding: 5px;
+    border-radius: 4px;
+    font-size: 12px;
+    transition: opacity 0.3s;
+}
+
+.length-slider-container:hover .length-tooltip {
+    display: inline-block;
+    opacity: 1;
+    position: absolute;
+    bottom: 90%;
+    left: 81%;
+    transform: translateX(-50%);
+}
+
+.remaining-rounds-text {
+    position: absolute;
+    bottom: 50px;
+    text-align: center;
+    color: white;
+    font-size: 16px;
 }
