--- a/frontend/src/styles/custom-alert.css
+++ b/frontend/src/styles/custom-alert.css
@@ -1,13 +1,15 @@
+/* Styles for custom alert component */
+
 .alert-background {
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    position: fixed; 
+    z-index: 1; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */      
+    width: 100%; 
+    height: 100%; 
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); /* black w/ opacity */      
 }
 
 .alert-content {
@@ -77,8 +79,8 @@
     color: green;
 }
 
-.yellow-text {
-    color: rgb(158, 158, 11);
+.yellow-text-alert {
+    color: rgb(137, 137, 8);
 }
   
 .red-text {
