--- a/frontend/src/styles/end.css
+++ b/frontend/src/styles/end.css
@@ -1,16 +1,18 @@
+/* Styles for end page */
+
 .score-container {
     position: absolute;
     font-size: 20px;
     top: 150px;
     background-color: #F0EAD6;
-    width: 20%;
+    width: 35%;
     height: 25%;
     text-align: center;
     border-radius: 25px;
 }
 
 .stats-header {
-    padding-top: 10px;
+    padding-top: 15px;
     text-decoration: underline;
 }
 
@@ -23,6 +25,7 @@
     position: absolute;
     top: 500px;
     color: white;
+    font-size: 30px;
 }
 
 .green-text {
