--- a/frontend/src/styles/timer.css
+++ b/frontend/src/styles/timer.css
@@ -19,7 +19,7 @@
     text-align: center;
     position: absolute;
     bottom: 60px;
-    padding-top: 100px;
+    margin-top: 100px;
     padding-bottom: 30px;
   }
   
